[package]
name = "enest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtt-target = { version = "0.3.1", features=["riscv"]}
esp32c3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "ce6d5b5" }
esp32c3-hal = {version = "0.11.0", features = ["direct-boot"]}

[patch.crates-io]
rtt-target = { git = 'https://github.com/onsdagens/rtt-target' }
